# tutorial-python-graphene-fastapi

./: models.py  pyproject.toml  schema.py  server.py
db/: __init__.py  tutorial-python-graphene-fastapi.db
