[tool.poetry]
name = "python-graphene-tutorial"
version = "0.1.0"
description = ""
authors = ["Min"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
graphene = "^3.3"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
starlette-graphene3 = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
