[tool.poetry]
name = "python-graphene-tutorial"
version = "0.1.0"
description = ""
authors = ["Min"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
graphene = "^3.0"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
starlette-graphene3 = "^0.6.0"
sqlalchemy = {extras = ["asyncio"], version = "^2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
